Fixed misaligned toolbar

--- a/site/public/stylesheets/custom.css
+++ b/site/public/stylesheets/custom.css
@@ -359,6 +359,7 @@ input:focus, textarea:focus {
   -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
+  vertical-align: middle;
   *margin-left: .3em;
 	}
 .btn:first-child {
